# eu-digital

./: $null  -1  .dockerignore  .env.example  .firebaserc  .gcloudignore  .gitignore  .replit  AGENTS.md  Dockerfile  README-CNPJWS-v1.md  README_PATCH.txt  README_backend.txt  _agenda_search_agenda.txt  _agenda_tree.txt  acervo_teste.txt  acervo_upload.txt  app.backup.202510072005.py  app.py  app.py.bak  app.py.bak-20251014-101117  app.py.before-audio.bak  backend_tree.txt  body.json  bp.json  build.sh  cfg.json  cnpj-lookup.js  cnpj.json  confirm.json  cupons.json  cupons.py  debug.json  download_url.txt  e --short HEAD  end_verification  true  env-lote1.yaml  env-lote2.yaml  env-lote3.yaml  env-lote4.yaml  (+49 more)
.firebase/: hosting.cHVibGlj.cache
cache/: kv.py
docs/: Arquitetura-IA.md  DEPLOY_PROCEDURE.md  RENDER_READY.md  extraction_execution_protocol.md  final_pipeline_contract_map.md  front_continuity_governance.md  front_cross_module_dependencies.md  front_function_candidates_audit.md  front_handle_dependencies.md  front_handle_flow_trace.md  front_kb_dependency_map.md  front_kb_runtime_boundary.md  front_kb_runtime_hubs.md  front_late_kb_reinforcement_audit.md  front_lookup_cluster_audit.md  front_lookup_flow.md  front_module_boundaries_map.md  front_ownership_phase2.md  front_platform_get_map_audit.md  front_platform_pack_material_audit.md  front_refactor_debts.md  front_refactor_phase_2_plan.md  front_refactor_state.md  front_response_governance.md  front_runtime_governance_map.md  front_runtime_pack_flow.md  response_mode_map.md  (+1 more)
domain/: acervo.py  pricing.py  (+2 more)
(+304 files in other folders)
